# PlanetaMatchMaker

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakeSettings.json  LICENSE  PlanetaMatchMaker.Cpp.props  PlanetaMatchMaker.sln  PlanetaMatchMaker.sln.DotSettings  README.md  README_jp.md  vcpkg-configuration.json  vcpkg.json
PlanetaMatchMakerServer/: CMakeLists.txt  PlanetaMatchMakerServer.filters  PlanetaMatchMakerServer.vcxproj  PlanetaMatchMakerServer.vcxproj.filters  PlanetaMatchMakerServerLib.vcxproj  setting.json
PlanetaMatchMakerServer/source/: main.cpp
PlanetaMatchMakerServer/source/async/: read_write.hpp  timer.cpp  timer.hpp
PlanetaMatchMakerServer/source/authentication/: authentication_http_client.cpp  authentication_result.hpp
PlanetaMatchMakerServer/source/client/: client_address.cpp  client_address.hpp  client_constants.hpp  client_data.cpp  client_data.hpp  client_error_code.hpp  client_errors.hpp  player_full_name.cpp  player_full_name.hpp  player_name_container.cpp  player_name_container.hpp
PlanetaMatchMakerServer/source/data/: client_data.hpp  data_constants.hpp  random_id_generator.hpp  room_data.hpp  room_data_container.hpp  server_data.hpp  thread_safe_data_container.h  thread_safe_data_container.hpp
PlanetaMatchMakerServer/source/datetime/: datetime.cpp  datetime.hpp
PlanetaMatchMakerServer/source/logger/: boost_console_logger.hpp  boost_file_logger.cpp  boost_file_logger.hpp  boost_logger_common.cpp  console_logger.cpp  console_logger.hpp  file_logger.cpp  file_logger.hpp  log.cpp  log.hpp  logger.hpp  logger_common.cpp  logger_common.hpp
PlanetaMatchMakerServer/source/main/: log_initializer.cpp  log_initializer.hpp  main.cpp
PlanetaMatchMakerServer/source/matching_server/: match_making_server.cpp  match_making_server.hpp  server_data.hpp  server_error_code.cpp  server_error_code.hpp
PlanetaMatchMakerServer/source/message/: message_constants.hpp  message_error_code.cpp  message_error_code.hpp  message_handle_error.cpp  message_handle_error.hpp  message_handle_error_code.cpp  message_handle_error_code.hpp  message_handle_parameter.hpp  message_handle_utilities.cpp  message_handle_utilities.hpp  message_handler.hpp  message_handler_container.cpp  message_handler_container.hpp  message_handler_container_factory.cpp  message_handler_container_factory.hpp  message_handler_invoker.cpp  message_handler_invoker.hpp  message_handler_invoker_factory.cpp  message_handler_invoker_factory.hpp  message_parameter_validator.cpp  message_parameter_validator.hpp  messages.hpp
PlanetaMatchMakerServer/source/network/: client_connection.cpp  client_connection.hpp  endpoint.cpp  endpoint.hpp  endpoint_address.cpp  endpoint_address.hpp  network_layer.cpp  network_layer.hpp  transport_layer.cpp  transport_layer.hpp
PlanetaMatchMakerServer/source/room/: room_constants.hpp  room_data.cpp  room_data.hpp  room_data_container.cpp  room_data_container.hpp
PlanetaMatchMakerServer/source/serialize/: pack.hpp  serializable.hpp  serialization_error.hpp  serialize_type_traits.hpp  serializer.cpp  serializer.hpp
PlanetaMatchMakerServer/source/server/: connection_handler.cpp  connection_handler.hpp  match_making_server.cpp  match_making_server.hpp  server.cpp  server.hpp  server_constants.hpp  server_data.cpp  server_data.hpp  server_error.cpp  server_error.hpp  server_error_code.cpp  server_error_code.hpp  server_errors.hpp  server_session.cpp  server_session.hpp  server_session_error.cpp  server_session_error.hpp  server_session_error_code.cpp  server_session_error_code.hpp  server_setting.cpp  server_setting.hpp  server_thread.cpp  server_thread.hpp  server_tls_context.cpp  server_tls_reload_signal_handler.cpp  server_tls_reload_signal_handler.hpp
PlanetaMatchMakerServer/source/session/: session_constants.hpp  session_data.cpp  session_data.hpp
PlanetaMatchMakerServer/source/utilities/: asio_stream_compatibility.cpp  asio_stream_compatibility.hpp  checked_static_cast.hpp  class_traits.hpp  concepts.hpp  enum_utilities.hpp  env_var.hpp  file_utilities.cpp  file_utilities.hpp  fixed_string.hpp  io_utility.hpp  log.cpp  log.hpp  pack.hpp  static_cast_with_assertion.hpp  string_utility.hpp  template_utilities.hpp
PlanetaMatchMakerServerLib/: CMakeLists.txt  PlanetaMatchMakerServerLib.vcxproj  PlanetaMatchMakerServerLib.vcxproj.filters
PlanetaMatchMakerServerLib/source/async/: timer.cpp
PlanetaMatchMakerServerLib/source/authentication/: authentication_execution_context.hpp  authentication_http_client.cpp  authentication_http_client.hpp  authentication_method.cpp  authentication_method.hpp  authentication_result.hpp  game.hpp  (+6 more)
PlanetaMatchMakerServerTest/: CMakeLists.txt  PlanetaMatchMakerServerTest.vcxproj  PlanetaMatchMakerServerTest.vcxproj.filters  async_read_write_test.cpp  checked_static_cast_test.cpp  datetime_test.cpp  fixed_string_test.cpp  logger_common_test.cpp  main.cpp  room_data_container_test.cpp  serialize_pack_test.cpp  serialize_test.cpp  serializer_pack_test.cpp  server_data_test.cpp  server_setting_test.cpp  session_data_test.cpp  string_utilities_test.cpp  thread_safe_data_container_test.cpp
PlanetaMatchMakerServerTest/integration_tests/: authentication_https_integration_test.cpp
PlanetaMatchMakerServerTest/protocol_tests/: authentication_protocol_test.cpp  connection_test_protocol_test.cpp  create_room_protocol_test.cpp  join_room_protocol_test.cpp  list_room_protocol_test.cpp  message_flow_protocol_test.cpp  message_handlers_protocol_test.cpp  protocol_test_support.hpp  update_room_status_protocol_test.cpp
PlanetaMatchMakerServerTest/unit_tests/: checked_static_cast_test.cpp  datetime_test.cpp  errors_test.cpp  logger_common_test.cpp  message_handler_invoker_factory_test.cpp  network_test.cpp  player_full_name_test.cpp  player_name_container_test.cpp  room_data_container_test.cpp  room_data_test.cpp  serialize_pack_test.cpp  server_data_test.cpp  server_setting_test.cpp  server_tls_reload_signal_handler_test.cpp  session_data_test.cpp  thread_safe_data_container_test.cpp  utilities_test.cpp
(+327 files in other folders)
